Fix spacing

--- a/docs/assets/css/book.css
+++ b/docs/assets/css/book.css
@@ -1,5 +1,5 @@
 .space {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .com_wsscode_pathom_book_graphql_fulcro-network_demos_RequireTokenApp__container button {
